--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">rAppla</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="button">Button</string>
+    <string name="fragment1">Tab1</string>
+    <string name="fragment2">Tab2</string>
+    <string name="fragment3">Tab3</string>
 
 </resources>
