--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -49,7 +49,8 @@
     
 
     <!-- Actionbar -->
-    <string name="refresh">Aktualisieren</string> 
+    <string name="refresh">Aktualisieren</string>
+    <string name="notes">Notizen</string> 
 	
 
     
