Notes can now actually be saved.
Also some minor layout changes in the Notes-tab

--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -50,7 +50,10 @@
 
     <!-- Actionbar -->
     <string name="refresh">Aktualisieren</string>
-    <string name="notes">Notizen</string> 
+    
+    
+    <string name="notes">Notizen</string>
+    <string name="save">Speichern</string> 
 	
 
     
