Added alarm-fragment. Currently not working though

--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -53,6 +53,7 @@
     
     
     <string name="notes">Notizen</string>
+    <string name="alarms">Wecker</string>
     <string name="save">Speichern</string> 
 	
 
