--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="notes">Notizen</string>
     <string name="alarms">Wecker</string>
     <string name="save">Speichern</string> 
+    <string name="add">Hinzufügen</string> 
 	
 
     
