--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="empty">"THIS IS A BIG ASS TEXT"</string> 
     <string name="infos">"Infos"</string> 
     <string name="date">Datum</string> 
+	<string name="notesaved">Notiz gespeichert</string> 
 	
 
     
