--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="infos">"Infos"</string> 
     <string name="date">Datum</string> 
 	<string name="notesaved">Notiz gespeichert</string> 
+	<string name="alarmsaved">Wecker gestellt</string> 
 	
 
     
