--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -66,6 +66,7 @@
     <string name="date">Datum</string> 
 	<string name="notesaved">Notiz gespeichert</string> 
 	<string name="alarmsaved">Wecker gestellt</string> 
+	<string name="notetextedit">noteTextEdit</string> 
 	
 
     
