Implemented Today-Button

--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -67,6 +67,7 @@
 	<string name="notesaved">Notiz gespeichert</string> 
 	<string name="alarmsaved">Wecker gestellt</string> 
 	<string name="notetextedit">noteTextEdit</string> 
+	<string name="today">Heute</string>
 	
 
     
