Some clean up and minor bugfixes

--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -68,8 +68,9 @@
 	<string name="alarmsaved">Wecker gestellt</string> 
 	<string name="notetextedit">noteTextEdit</string> 
 	<string name="today">Heute</string>
+	<string name="ok">OK</string>
+	<string name="toEvent">Zum Event</string>
 	
-
     
     
 </resources>
