--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -20,18 +20,18 @@
         <item>7 d</item>
     </string-array>
     <string-array name="UpdateIntervals_Values">
-        <item>1</item>
-        <item>5</item>
-        <item>10</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>720</item>
-        <item>1440</item>
-        <item>2880</item>
-        <item>7200</item>
-        <item>10080</item>
+        <item>60000</item>
+        <item>300000</item>
+        <item>600000</item>
+        <item>1800000</item>
+        <item>3600000</item>
+        <item>10800000</item>
+        <item>21600000</item>
+        <item>43200000</item>
+        <item>86400000</item>
+        <item>172800000</item>
+        <item>432000000</item>
+        <item>604800000</item>
     </string-array>
 
     <string name="DEFAULT_FRAGMENT_TITLE">No title</string>
@@ -41,6 +41,7 @@
     
     
     <!-- Preferences -->
+    <string name="wifiSync">Nur im Wifi aktualisieren</string>
     <string name="gmailSync">Mit GMail synchronisieren</string>
     <string name="pushNotifications">Push Benachrichtigungen\nbei Planänderung</string>
     <string name="updateInterval">Aktualisierungsintervall</string>
