Added day and week bar

--- a/rAppla/res/values/strings.xml
+++ b/rAppla/res/values/strings.xml
@@ -71,6 +71,8 @@
 	<string name="today">Heute</string>
 	<string name="ok">OK</string>
 	<string name="toEvent">Zum Event</string>
+	<string name="dayBar">dayBar</string>
+	<string name="timeBar">timeBar</string>
 	
     
     
